Udacity Assign 3(Regularization) and 4(Convnet)

--- a/tensorflow/examples/udacity/2_fullyconnected.ipynb
+++ b/tensorflow/examples/udacity/2_fullyconnected.ipynb
@@ -229,6 +229,7 @@
      }
     },
     "colab_type": "code",
+    "collapsed": true,
     "id": "Nfv39qvtvOl_"
    },
    "outputs": [],
@@ -618,7 +619,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_size = 128\n",
